chore: implement user module

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT=1111
 
 MONGODB_HOST=localhost
 MONGODB_PORT=27017
-MONGODB_USERNAME=
-MONGODB_PASSWORD=
-MONGODB_DATABASE=
+MONGODB_USERNAME=root
+MONGODB_PASSWORD=test
+MONGODB_DATABASE=phamarcist
 
