chore: #2 implementing authenticate with jwt

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ MONGODB_USERNAME=root
 MONGODB_PASSWORD=test
 MONGODB_DATABASE=phamarcist
 
+JWT_SECRET="thisisjwtsecret"
+JWT_ACCESS_TOKEN_EXPIRATION=10m
+JWT_REFRESH_TOKEN_EXPIRATION=10d
