chore:#2 implement google oauth2 authenticate

--- a/.env
+++ b/.env
@@ -1,12 +1,19 @@
-HOST=localhost
+// SERVER
+HOST=side.test
 PORT=1111
 
+// MONGODB
 MONGODB_HOST=localhost
 MONGODB_PORT=27017
 MONGODB_USERNAME=root
 MONGODB_PASSWORD=test
 MONGODB_DATABASE=phamarcist
 
+// JWT
 JWT_SECRET="thisisjwtsecret"
 JWT_ACCESS_TOKEN_EXPIRATION=10m
 JWT_REFRESH_TOKEN_EXPIRATION=10d
+
+// GOOGLE OAUTH2
+GOOGLE_CLIENT_ID=495080223941-h0b00eo8jgffovc901ss302bsppdm16a.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
