--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "joi": "^17.9.2",
     "mongoose": "^7.4.2",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
