chore:#2 finish setup base for appointment module/ refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,10 +27,11 @@
       "@core": ["./src/core"],
       "@mongod": ["./src/common/database/mongo"],
       "@constants": ["./src/common/constants"],
-      "@decorators": ["./src/common/decorators"],
+      "@decorators": ["src/decorators"],
       "@dtos": ["./src/common/dtos"],
       "@enums": ["./src/common/enums"],
-      "@guards": ["./src/modules/auth/guards"]
+      "@guards": ["src/guards"],
+      "@interceptors": ["src/interceptors"]
     }
   }
 }
