chore:#5 setup redis and bull queue

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@automapper/classes": "^8.7.7",
     "@automapper/core": "^8.7.7",
     "@automapper/nestjs": "^8.7.7",
+    "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
