--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,8 +30,10 @@
       "@decorators": ["src/decorators"],
       "@dtos": ["./src/common/dtos"],
       "@enums": ["./src/common/enums"],
+      "@interfaces": ["src/common/interfaces"],
       "@guards": ["src/guards"],
-      "@interceptors": ["src/interceptors"]
+      "@interceptors": ["src/interceptors"],
+      "@shared": ["src/shared"]
     }
   }
 }
