--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.14.0",
     "handlebars": "^4.7.8",
     "joi": "^17.9.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.4.2",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
@@ -56,6 +57,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/moment": "^2.13.0",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.9",
     "@types/passport-google-oauth2": "^0.1.5",
